k8s/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kafka
  name: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      name: kafka
      labels:
        app: kafka
    spec:
      containers:

        - image: confluentinc/cp-kafka
          imagePullPolicy: IfNotPresent
          name: kafka
          ports:
            - containerPort: 9092
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
spec:
  selector:
    app: kafka
  ports:
    - name: internal
      protocol: TCP
      port: 9092
      targetPort: 9092
    - name: external
      protocol: TCP
      port: 29092
      targetPort: 29092
