k8s/nats.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-server-deployment
  labels:
    app: nats-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats-server
  template:
    metadata:
      labels:
        app: nats-server
    spec:
      containers:
        - name: nats
          image: nats
          ports:
            - containerPort: 4222
            - containerPort: 8222
---
apiVersion: v1
kind: Service
metadata:
  name: nats-service
spec:
  selector:
    app: nats-server
  ports:
    - protocol: TCP
      port: 4222
      targetPort: 4222
---
apiVersion: v1
kind: Service
metadata:
  name: nats-monitoring
spec:
  selector:
    app: nats-server
  type: NodePort
  ports:
    - protocol: TCP
      port: 8222
      targetPort: 8222
      nodePort: 30001
