k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: pass-manager.com
      http:
        paths:
          - path: /api/v1/owners
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 8081
